--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         <title>Document</title>
     </head>
     <body>
+        <h1>Git</h1>
+        <p>hello world</p>
+        <div>
 
+        </div>
+        <section>
+            <h2>section2</h2>
+        </section>
+    
     </body>
 </html>
